# COSC_352_FALL_2025

Project8/: .gitignore  Dockerfile  README.md  baltimore-homicides.cabal  baltimore_homicides_combined.csv
Project8/src/: Main.hs
