cabal-version:      2.4
name:               baltimore-homicides
version:            0.1.0.0
synopsis:           Baltimore homicides analysis
author:             Tehya Purifoy
maintainer:         tpurifoy52@students.towson.edu

executable baltimore-homicides
    main-is:          Main.hs
    build-depends:    base >=4.14 && <5,
                      cassava >=0.5,
                      vector >=0.12,
                      bytestring >=0.10,
                      containers >=0.6,
                      text >=1.2
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:      -Wall
